--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "type": "git",
     "url": "git+https://github.com/JSN190/MultiredditNav.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "John Su",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/JSN190/MultiredditNav/issues"
   },
@@ -20,9 +20,7 @@
     "file": "^0.2.2",
     "path": "^0.12.7",
     "runjs": "^4.3.2",
-    "web-ext": "^2.9.1"
-  },
-  "dependencies": {
+    "web-ext": "^2.9.1",
     "fs-extra": "^7.0.0"
   }
 }
