--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
   },
   "homepage": "https://github.com/JSN190/MultiredditNav#readme",
   "devDependencies": {
+    "browserify": "^16.2.2",
     "file": "^0.2.2",
+    "fs-extra": "^7.0.0",
     "path": "^0.12.7",
     "runjs": "^4.3.2",
-    "web-ext": "^2.9.1",
-    "fs-extra": "^7.0.0"
-  }
+    "uglify-es": "^3.3.9",
+    "web-ext": "^2.9.1"
+  },
+  "dependencies": {},
+  "eslintIgnore": [
+    "/build"
+  ]
 }
